--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "hbs": "~3.1.0",
+    "mongoskin": "^2.0.3",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   },
@@ -35,6 +36,7 @@
     "grunt-mocha": "^0.4.13",
     "grunt-mocha-appium": "^0.4.0",
     "grunt-mocha-browser": "0.0.5",
+    "i18n": "^0.5.0",
     "jscover": "^0.2.4",
     "mocha": "^2.3.3",
     "moment": "^2.10.6",
