--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "hbs": "~3.1.0",
-    "mongoskin": "^2.0.3",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "bower": "^1.6.5",
     "chai": "^3.4.1",
+    "express-session": "^1.12.1",
     "file-system": "^2.2.1",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
@@ -42,7 +42,12 @@
     "mocha": "^2.3.3",
     "moment": "^2.10.6",
     "mongodb": "^2.0.48",
+    "mongoose": "^4.2.9",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.0.0",
+    "passport-google-oauth": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^3.1.0",
     "redis": "^2.3.0",
     "rewire": "^2.4.0"
   },
