--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "~4.13.1",
     "hbs": "~3.1.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "svgxuse": "^1.1.3"
   },
   "devDependencies": {
     "bower": "^1.6.5",
