--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,8 @@
     "summernote": "~0.6.16",
     "bootstrap-toggle": "~2.2.1",
     "svgxuse": "~1.1.3"
+  },
+  "devDependencies": {
+    "nanoscroller": "~0.8.7"
   }
 }
