--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "svgxuse": "^1.1.3"
   },
   "devDependencies": {
+    "blueimp-file-upload-node": "^2.1.0",
     "bower": "^1.6.5",
     "chai": "^3.4.1",
     "electron-prebuilt": "^0.35.4",
@@ -45,6 +46,7 @@
     "moment": "^2.10.6",
     "mongodb": "^2.0.48",
     "mongoose": "^4.2.9",
+    "multer": "^1.1.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
     "passport-google-oauth": "^0.2.0",
