--- a/bower.json
+++ b/bower.json
@@ -13,9 +13,8 @@
     "datatables": "~1.10.10",
     "summernote": "~0.6.16",
     "bootstrap-toggle": "~2.2.1",
-    "svgxuse": "~1.1.3"
+    "svgxuse": "~1.1.3",
+    "jquery-touchswipe": "~1.6.15"
   },
-  "devDependencies": {
-    "nanoscroller": "~0.8.7"
-  }
+  "devDependencies": {}
 }
