--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,7 @@
     "svgxuse": "~1.1.3",
     "jquery-touchswipe": "~1.6.15"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "bootstrap-fileinput": "~4.3.0"
+  }
 }
