--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,10 @@
     "bootstrap-toggle": "~2.2.1",
     "svgxuse": "~1.1.3",
     "jquery-touchswipe": "~1.6.15",
-    "bootstrap-fileinput": "~4.3.0"
+    "bootstrap-fileinput": "~4.3.0",
+    "cropper": "~2.3.0",
+    "image-clipper": "~0.4.3"
+  },
+  "devDependencies": {
   }
 }
