--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "compression": "^1.6.1",
     "cookie-parser": "~1.3.5",
+    "datatables-query": "^0.1.0",
     "debug": "~2.2.0",
     "express": "^4.13.4",
+    "fs": "0.0.2",
+    "gm": "^1.21.1",
     "hbs": "~3.1.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "svgxuse": "^1.1.7"
+    "svgxuse": "^1.1.10"
   },
   "devDependencies": {
     "bower": "^1.6.5",
+    "compression": "^1.6.1",
     "connect-flash": "^0.1.1",
     "electron-prebuilt": "^0.35.4",
     "express-session": "^1.12.1",
