--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mongodb": "^2.0.48",
     "mongoose": "^4.2.9",
     "multer": "^1.1.0",
+    "ottoman": "^1.0.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0",
