--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bower": "^1.6.5",
     "compression": "^1.6.1",
     "connect-flash": "^0.1.1",
+    "couchbase": "^2.1.4",
     "electron-prebuilt": "^0.35.4",
     "express-session": "^1.12.1",
     "grunt": "^0.4.5",
