--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "mocha"
   },
   "dependencies": {
+    "async": "^1.5.2",
     "body-parser": "~1.13.2",
     "compression": "^1.6.1",
     "cookie-parser": "~1.3.5",
@@ -24,7 +25,8 @@
     "hbs": "~3.1.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "svgxuse": "^1.1.10"
+    "svgxuse": "^1.1.10",
+    "uuid": "^2.0.2"
   },
   "devDependencies": {
     "bower": "^1.6.5",
