--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fs": "0.0.2",
     "gm": "^1.21.1",
     "hbs": "~3.1.0",
+    "load-pkg": "^3.0.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "svgxuse": "^1.1.10",
