Added couchbase -fix alerts - redesign profile page - added compressed http requests. - Added session check on long waiting time

--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "fs": "0.0.2",
     "gm": "^1.21.1",
     "hbs": "~3.1.0",
+    "hbs-help": "0.0.1",
     "load-pkg": "^3.0.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.6",
     "svgxuse": "^1.1.10",
     "uuid": "^2.0.2"
   },
