--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "summernote": "~0.6.16",
     "svgxuse": "~1.1.3",
     "bootstrap-fileinput": "~4.3.0",
-    "cropper": "~2.3.0",
-    "image-clipper": "~0.4.3"
+    "cropper": "^2.3.0",
+    "image-clipper": "~0.4.3",
+    "bootbox.js": "bootbox#^4.4.0",
+    "remarkable-bootstrap-notify": "^3.1.3"
   }
 }
