--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
 #Website Plexus
-bin/www
-bower_components/
-data/*.0
-data/*.ns
-data/*.lock
-data/*.ns
-node_modules/*
-public/images/*
-public/javascript/*
-public/stylesheets/*
-public/fonts/*
-data/*.bson
+
 npm-debug.log
-public/
+bin/www
+bower_components
+node_modules
+public
