--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 #Website Plexus
-
-npm-debug.log
 bin/www
-bower_components
-node_modules
-public
+bower_components/*
+node_modules/*
+public/images/*
+public/javascript/*
+public/stylesheets/*
+public/fonts/*
+npm-debug.log
+public/*
