--- a/package.json
+++ b/package.json
@@ -2,33 +2,35 @@
   "name": "Plexus",
   "version": "1.0.0",
   "private": false,
-  "description": "boilerplate for websites with express for applications with express",
+  "description": "Boilerplate for applications with Express And Couchbase",
   "main": "app.js",
   "readme": "README.md",
   "scripts": {
     "prestart": "npm run build && npm run rejoice",
     "build": "grunt",
-    "rejoice": "echo Grunt less, concat and uglify finished. App is starting...!",
+    "rejoice": "echo Compiling and Minifycation done. Plexus is Alive!!",
     "start": "node ./bin/www",
     "test": "mocha"
   },
   "dependencies": {
     "async": "^1.5.2",
     "body-parser": "~1.13.2",
-    "compression": "^1.6.1",
+    "compression": "^1.6.2",
     "cookie-parser": "~1.3.5",
-    "datatables-query": "^0.1.0",
     "debug": "~2.2.0",
     "express": "^4.13.4",
     "fs": "0.0.2",
-    "gm": "^1.21.1",
+    "gm": "^1.22.0",
     "hbs": "~3.1.0",
     "hbs-help": "0.0.1",
     "load-pkg": "^3.0.1",
     "morgan": "~1.6.1",
+    "nodemailer": "^2.4.1",
+    "nodemailer-smtp-transport": "^2.5.0",
+    "sanitize-html": "^1.11.4",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.6",
-    "svgxuse": "^1.1.10",
+    "svgxuse": "^1.1.16",
     "uuid": "^2.0.2"
   },
   "devDependencies": {
