--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "async": "^1.5.2",
     "body-parser": "~1.13.2",
     "compression": "^1.6.2",
+    "connect-couchbase": "^0.2.9",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "electron-prebuilt": "^1.2.0",
     "express": "^4.13.4",
     "fs": "0.0.2",
     "gm": "^1.22.0",
@@ -38,7 +40,6 @@
     "compression": "^1.6.1",
     "connect-flash": "^0.1.1",
     "couchbase": "^2.1.4",
-    "electron-prebuilt": "^0.35.4",
     "express-session": "^1.12.1",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
